# opengl_starter

./: .gitignore  CMakeLists.txt  readme.md
include/: window_helper.h
include/glad/: glad.h
src/: gl_helper.cpp  gl_helper.h  glad.c  main.cpp  window_helper.cpp
